fix spacing when card expanded

--- a/src/components/Card/_card.scss
+++ b/src/components/Card/_card.scss
@@ -1365,6 +1365,21 @@ $easingFn: ease-in-out;
         border-top-right-radius: 8px;
       }
 
+      &--expanding-title {
+        margin-bottom: $spacing-stack-12;
+
+        &::after {
+          content: '';
+          display: block;
+          width: 100%;
+          height: 8px;
+
+          @include wider-than($breakpoint-desktop) {
+            height: 12px;
+          }
+        }
+      }
+
       &--post-content {
         position: absolute;
         top: 100%;
@@ -1373,16 +1388,17 @@ $easingFn: ease-in-out;
         overflow: hidden;
         width: calc(100% + 2px);
         max-height: 0;
-        padding: $padding-offset $spacing-inline-24 0;
+        padding: $spacing-stack-12 $spacing-inline-24 0;
         border-width: 0 1px 1px;
         border-bottom-right-radius: 8px;
         border-bottom-left-radius: 8px;
         background-color: $color-foreground-on-tint;
         transition: 0.3s $easingFn max-height, 0.3s $easingFn padding, 0.3s $easingFn background-color;
         transform: translateX(-1px);
+        transform-origin: center top;
 
         @include wider-than($breakpoint-desktop) {
-          padding: $padding-offset-b $spacing-inline-32 0;
+          padding: $spacing-stack-12 $spacing-inline-32 0;
         }
 
         .tco-lights-out & {
@@ -1391,6 +1407,9 @@ $easingFn: ease-in-out;
 
         p {
           margin-bottom: 0;
+          opacity: 0;
+          transition: 0.3s $easingFn opacity;
+          transform: translateY(-12px);
         }
       }
 
@@ -1478,11 +1497,15 @@ $easingFn: ease-in-out;
 
       &--post-content:not(.tco-card--post-content-expanded) {
         max-height: 200px;
-        padding-bottom: $spacing-stack-24;
+        padding-bottom: $spacing-stack-12;
         background-color: $color-classic-glass;
 
         @include wider-than($breakpoint-desktop) {
-          padding-bottom: $spacing-stack-32;
+          padding-bottom: $spacing-stack-20;
+        }
+
+        p {
+          opacity: 1;
         }
       }
 
